--- a/project/web/index.html
+++ b/project/web/index.html
@@ -22,12 +22,20 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Predictor</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
-                            </li>
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Predictor</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="results.html">Results</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="about.html">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="team.html">Our Team</a>
+                                </li>
+                            </ul>
                         </ul>
                     </div>
                 </form>
@@ -91,8 +99,7 @@
                             <input type="number" class="form-control" name="field10" id="field10">
                         </div>
                         <div class="col-md-6 mt-1">
-                            <label for="field11" class="form-label">Communication Skills:*
-                            </label>
+                            <label for="field11" class="form-label">Communication Skills</label>
                             <input type="number" class="form-control" name="field11" id="field11">
                         </div>
                         <div class="col-md-6 mt-1">
@@ -121,13 +128,13 @@
             </form>
         </div>
 
-        <footer class="app-footer d-flex flex-wrap justify-content-between align-items-center p-5 py-3 my-1 border-top">
+        <footer class="app-footer d-flex flex-wrap justify-content-between align-items-center p-5 py-1 mt-4 my-0 border-top">
             <div class="col-md-4 d-flex align-items-center">
                 <span class="text-muted">© 2024 Plcemate Pro, Inc</span>
             </div>
 
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-muted" href="#">
+                <li class="ms-3">
                     <a href="https://www.facebook.com/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                         <i class="social-icons fa-brands fa-square-facebook facebook-ic"></i>
                     </a>    
