--- a/project/web/results.html
+++ b/project/web/results.html
@@ -18,12 +18,13 @@
                 <img src="assets/images/loader.gif" />
             </div>
         </div>
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light pt-3 pb-3 px-5">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img class="logo" src="assets/images/app-logo.png" />
                 </a>
-                <form class="d-flex">
+                <div class="d-flex">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -43,7 +44,7 @@
                             </li>
                         </ul>
                     </div>
-                </form>
+                </div>
             </div>
         </nav>
         <section class="py-3 py-md-5 py-xl-8">
