--- a/project/web/about.html
+++ b/project/web/about.html
@@ -16,7 +16,7 @@
                 <a class="navbar-brand" href="#">
                     <img class="logo" src="assets/images/app-logo.png" />
                 </a>
-                <form class="d-flex">
+                <div class="d-flex">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -36,7 +36,7 @@
                             </li>
                         </ul>
                     </div>
-                </form>
+                </div>
             </div>
         </nav>
 
