--- a/project/web/team.html
+++ b/project/web/team.html
@@ -16,7 +16,7 @@
                 <a class="navbar-brand" href="#">
                     <img class="logo" src="assets/images/app-logo.png" />
                 </a>
-                <form class="d-flex">
+                <div class="d-flex">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -36,9 +36,10 @@
                             </li>
                         </ul>
                     </div>
-                </form>
+                </div>
             </div>
         </nav>
+        
         <section class="py-3 py-md-5 mb-4 py-xl-8">
             <div class="container">
                 <div class="row justify-content-md-center">
