--- a/project/web/index.html
+++ b/project/web/index.html
@@ -60,11 +60,11 @@
                     <div class="row">
                         <div class="col-md-6">
                             <label for="field1" class="form-label">Name</label>
-                            <input type="text" class="form-control" name="field1" id="field1" required>
+                            <input type="text" class="form-control" name="name" id="field1" required>
                         </div>
                         <div class="col-md-6">
                             <label for="field2" class="form-label">Class</label>
-                            <input type="text" class="form-control" name="field2" id="field2" required>
+                            <input type="text" class="form-control" name="class" id="field2" required>
                         </div>
                     </div>
                 </fieldset>
@@ -74,70 +74,74 @@
                     <div class="row">
                         <div class="col-md-6">
                             <label for="field1" class="form-label">Academic Performance</label>
-                            <input type="number" class="form-control" name="field1" id="field1" required>
+                            <input type="number" class="form-control" name="academic_performance" id="field1" required>
                         </div>
                         <div class="col-md-6">
                             <label for="field2" class="form-label">Technical Skills</label>
-                            <input type="number" class="form-control" name="field2" id="field2" required>
+                            <input type="number" class="form-control" name="technical_skills" id="field2" required>
                         </div>
                         <div class="col-md-6">
                             <label for="field3" class="form-label">Core Knowledge
                             </label>
-                            <input type="number" class="form-control" name="field3" id="field3" required>
+                            <input type="number" class="form-control" name="core_knowledge" id="field3" required>
                         </div>
                         <div class="col-md-6">
                             <label for="field4" class="form-label">Puzzle Solving</label>
-                            <input type="number" class="form-control" name="field4" id="field4" required>
+                            <input type="number" class="form-control" name="puzzle_solving" id="field4" required>
                         </div>
                         <div class="col-md-6">
                             <label for="field5" class="form-label">Programming Skills</label>
-                            <input type="number" class="form-control" name="field5" id="field5" required>
+                            <input type="number" class="form-control" name="programming_skills" id="field5" required>
                         </div>
                         <div class="col-md-6">
-                            <label for="field6" class="form-label">Project and Training</label>
-                            <input type="number" class="form-control" name="field6" id="field6" required>
+                            <label for="field6" class="form-label">Group Discussion Score</label>
+                            <input type="number" class="form-control" name="group_discussion" id="field6" required>
                         </div>
                         <div class="col-md-6">
-                            <label for="field7" class="form-label">Internship</label>
-                            <input type="number" class="form-control" name="field7" id="field7" required>
+                            <label for="field7" class="form-label">Project</label>
+                            <input type="number" class="form-control" name="project" id="field7" required>
                         </div>
                         <div class="col-md-6">
-                            <label for="field8" class="form-label">Backlog</label>
-                            <input type="number" class="form-control" name="field8" id="field8" required>
+                            <label for="field8" class="form-label">Internship</label>
+                            <input type="number" class="form-control" name="internship" id="field8" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="field9" class="form-label">Backlog</label>
+                            <input type="number" class="form-control" name="backlog" id="field9" required>
                         </div>
                     </div>
                 </fieldset>
 
                 <fieldset class="app-fieldset mt-4">
-                    <legend>Educational Skills:</legend>
+                    <legend>Professional Skills:</legend>
                     <div class="row">
                         <div class="col-md-6 mt-1">
-                            <label for="field9" class="form-label">Coding Skills</label>
-                            <input type="number" class="form-control" name="field9" id="field9" required>
+                            <label for="field10" class="form-label">Coding Skills</label>
+                            <input type="number" class="form-control" name="coding_skills" id="field10" required>
                         </div>
                         <div class="col-md-6 mt-1">
-                            <label for="field10" class="form-label">Aptitude Skills</label>
-                            <input type="number" class="form-control" name="field10" id="field10" required>
+                            <label for="field11" class="form-label">Aptitude Skills</label>
+                            <input type="number" class="form-control" name="aptitude_skills" id="field11" required>
                         </div>
                         <div class="col-md-6 mt-1">
-                            <label for="field11" class="form-label">Communication Skills</label>
-                            <input type="number" class="form-control" name="field11" id="field11" required>
+                            <label for="field12" class="form-label">Communication Skills</label>
+                            <input type="number" class="form-control" name="communication_skills" id="field12" required>
                         </div>
                         <div class="col-md-6 mt-1">
-                            <label for="field12" class="form-label">Presentation Skills</label>
-                            <input type="number" class="form-control" name="field12" id="field12" required>
+                            <label for="field13" class="form-label">Presentation Skills</label>
+                            <input type="number" class="form-control" name="presentation_skills" id="field13" required>
+                        </div>  
+                        <div class="col-md-6 mt-1">
+                            <label for="field14" class="form-label">English Proficiency</label>
+                            <input type="number" class="form-control" name="english_proficiency" id="field14" required>
                         </div>
                         <div class="col-md-6 mt-1">
-                            <label for="field13" class="form-label">Management Skills</label>
-                            <input type="number" class="form-control" name="field13" id="field13" required>
+                            <label for="field15" class="form-label">Management Skills</label>
+                            <input type="number" class="form-control" name="management_skills" id="field15" required>
                         </div>
-                        <div class="col-md-6 mt-1">
-                            <label for="field14" class="form-label">Project Experience</label>
-                            <input type="number" class="form-control" name="field14" id="field14" required>
-                        </div>
-                        <div class="col-md-6 mt-1">
-                            <label for="field15" class="form-label">Training</label>
-                            <input type="number" class="form-control" name="field15" id="field15" required>
+						<div class="col-md-6 mt-1">
+                            <label for="field16" class="form-label">Training</label>
+                            <input type="number" class="form-control" name="training" id="field16" required>
                         </div>
                     </div>
                 </fieldset>
@@ -196,10 +200,9 @@
                             $('.loader').show();
                         },
                         success:function(resp){
-
+                            $('.loader').hide();
                         },
                         error: function(e){
-                            console.log(e);
                             $('.loader').hide();
                         }
                     });
